docs: fix the alignment of the featured resources in the microsite home page

--- a/docs/main/src/components/FeaturedResources/styles.module.css
+++ b/docs/main/src/components/FeaturedResources/styles.module.css
@@ -18,6 +18,10 @@
     color: var(--ifm-font-color-base);
 }
   
+.resourcesSection {
+    justify-content: center;
+}
+
 .resourcesSection > :global(.col) > * {
     margin-bottom: 2rem;
 }
